--- a/file.html
+++ b/file.html
@@ -3,6 +3,7 @@
   <head>
     <title>.</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mobile.css" />
     <script src="index.js"></script>
   </head>
   <body>
@@ -33,7 +34,7 @@
             </button>
           </div>
           <div class="hero-info">
-            <div>
+            <div class="hero-info-text-container">
               <h1 class="hero-info-title">
                 Ola, Muito prazer! <br />
                 Sou o Angel Gabriel
@@ -82,7 +83,7 @@
               <div class="ability-card-icon-container">
                 <img
                   class="ability-card-icon-img"
-                  src="icon1.png"
+                  src="icons/icon1.png"
                   alt="Habilidades Gerais"
                 />
               </div>
@@ -102,7 +103,7 @@
               <div class="ability-card-icon-container">
                 <img
                   class="ability-card-icon-img"
-                  src="icon2.png"
+                  src="icons/icon2.png"
                   alt="Front-End"
                 />
               </div>
@@ -122,7 +123,7 @@
               <div class="ability-card-icon-container">
                 <img
                   class="ability-card-icon-img"
-                  src="icon3.png"
+                  src="icons/icon3.png"
                   alt="Back-End"
                 />
               </div>
@@ -144,7 +145,7 @@
             <div class="section-portfolio-card">
               <img
                 class="section-portfolio-img"
-                src="projeto1.png"
+                src="icons/projeto1.png"
                 alt="Projeto Supermercado"
               />
               <h5>Supermarket list</h5>
@@ -169,7 +170,7 @@
             <div class="section-portfolio-card">
               <img
                 class="section-portfolio-img"
-                src="projeto2.png"
+                src="icons/projeto2.png"
                 alt="Projeto Booklist"
               />
               <h5>BookClub</h5>
@@ -194,7 +195,7 @@
             <div class="section-portfolio-card">
               <img
                 class="section-portfolio-img"
-                src="projeto1.png"
+                src="icons/projeto1.png"
                 alt="Projeto Supermercado"
               />
               <h5>Supermarket list</h5>
